syntax = "proto3";

import "google/protobuf/timestamp.proto";

package acme.v1.usdt;

message Transfers {
    repeated Transfer items = 1;
}

message Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string value = 7;
}
